--- a/Teaching/ISIS3710/HTML&CSS/src/ex2_Soto/index.html
+++ b/Teaching/ISIS3710/HTML&CSS/src/ex2_Soto/index.html
@@ -1,9 +1,30 @@
-Juan Eduardo Soto PhD
-Profesor asociado, Universidad de los Andes
-Departamento de Ciencias de la computación
-Facultad de Matemáticas
-Bogotá, Colombia
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Juan Eduardo Soto</title>
+	</head>
 
-Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos de Machine Learning, reconocimiento de patrones y optimización convexa, con el objetivo de ampliar el entendimiento de varios paradigmas del aprendizaje estadístico sobre volúmenes inmensos de datos. Trabajo en problemas de visión por computador, reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
+	<body>
+		Juan Eduardo Soto PhD
+		Profesor asociado, Universidad de los Andes
+		Departamento de Ciencias de la computación
+		Facultad de Matemáticas
+		Bogotá, Colombia
 
-Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la facultad de matemáticas de la Universidad de los Andes, donde co dirige el laboratorio de Data mining and Pattern matching. Su área de investigación, se centra en la implementación eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award de ACM, IEEE, CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer Science en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la Universidad de los Andes.
+		Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos 
+		de Machine Learning, reconocimiento de patrones y optimización convexa, con 
+		el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico 
+		sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador,
+		reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
+
+		Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la
+		facultad de matemáticas de la Universidad de los Andes, donde co dirige el laboratorio de
+		Data mining and Pattern matching. Su área de investigación, se centra en la implementación
+		eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no
+		estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award
+		de ACM, IEEE, CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer
+		Science en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la
+		Universidad de los Andes.
+	</body>
+</html>
