--- a/Teaching/ISIS3710/HTML&CSS/src/ex2_Soto/index.html
+++ b/Teaching/ISIS3710/HTML&CSS/src/ex2_Soto/index.html
@@ -6,25 +6,25 @@
 	</head>
 
 	<body>
-		Juan Eduardo Soto PhD
-		Profesor asociado, Universidad de los Andes
-		Departamento de Ciencias de la computación
-		Facultad de Matemáticas
-		Bogotá, Colombia
+		<h2>Juan Eduardo Soto Ph.D</h2>
+		<h3>Profesor asociado, Universidad de los Andes</h3>
+		<h3>Departamento de Ciencias de la computación</h3>
+		<h3>Facultad de Matemáticas</h3>
+		<h3>Bogotá, Colombia</h3>
 
-		Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos 
-		de Machine Learning, reconocimiento de patrones y optimización convexa, con 
+		<p>Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos 
+		de <em>Machine Learning</em>, reconocimiento de patrones y optimización convexa, con 
 		el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico 
 		sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador,
-		reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
+		reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.</p>
 
-		Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la
-		facultad de matemáticas de la Universidad de los Andes, donde co dirige el laboratorio de
-		Data mining and Pattern matching. Su área de investigación, se centra en la implementación
+		<p>Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la
+		facultad de matemáticas de la Universidad de los Andes, donde co-dirige el laboratorio de
+		<em>Data mining and Pattern matching</em>. Su área de investigación, se centra en la implementación
 		eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no
 		estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award
-		de ACM, IEEE, CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer
-		Science en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la
-		Universidad de los Andes.
+		de ACM, IEEE y CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer
+		Science and Electrical Engineering en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la
+		Universidad de los Andes.</p>
 	</body>
 </html>
