An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/src/ex2_Soto/index.html
+++ b/Teaching/ISIS3710/HTML&CSS/src/ex2_Soto/index.html
@@ -6,7 +6,8 @@
 	</head>
 
 	<body>
-		<h2>Juan Eduardo Soto Ph.D</h2>
+		<h2><img src="photo.jpg" alt="Juan Eduardo Soto" height="150" width="150"><br>Juan Eduardo Soto Ph.D</h2>
+		
 		<h3>Profesor asociado, Universidad de los Andes</h3>
 		<h3>Departamento de Ciencias de la computación</h3>
 		<h3>Facultad de Matemáticas</h3>
@@ -16,9 +17,12 @@
 		de <em>Machine Learning</em>, reconocimiento de patrones y optimización convexa, con 
 		el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico 
 		sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador,
-		reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.</p>
+		reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
 
-		<p>Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la
+		<br>
+		<br>
+
+		Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la
 		facultad de matemáticas de la Universidad de los Andes, donde co-dirige el laboratorio de
 		<em>Data mining and Pattern matching</em>. Su área de investigación, se centra en la implementación
 		eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no
