Main example source updated

--- a/Teaching/ISIS3710/HTML&CSS/src/ex2_Soto/index.html
+++ b/Teaching/ISIS3710/HTML&CSS/src/ex2_Soto/index.html
@@ -6,15 +6,23 @@
 	</head>
 
 	<body>
-		<h2><img src="photo.jpg" alt="Juan Eduardo Soto" height="150" width="150"><br>Juan Eduardo Soto Ph.D</h2>
+		<h2><img src="photo.jpg" alt="Juan Eduardo Soto" height="150" width="150"><br>Juan Eduardo Soto Ph.D<sub>2</h2>
 		
 		<h3>Profesor asociado, Universidad de los Andes</h3>
 		<h3>Departamento de Ciencias de la computación</h3>
 		<h3>Facultad de Matemáticas</h3>
-		<h3>Bogotá, Colombia</h3>
+
+		<blockquote>
+			Let us change our traditional attitude to the construction of programs. Instead of imagining that our main task is to instruct a computer what to do, let us concentrate rather on explaining to human beings what we want a computer to do.
+
+			<br>
+
+			<i> Donald E. Knuth </i>
+
+		</blockquote>
 
 		<p>Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos 
-		de <em>Machine Learning</em>, reconocimiento de patrones y optimización convexa, con 
+		de <em>Machine Learning</em>, reconocimiento de patrones y <ins>optimización convexa</ins>, con 
 		el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico 
 		sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador,
 		reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
@@ -27,8 +35,15 @@
 		<em>Data mining and Pattern matching</em>. Su área de investigación, se centra en la implementación
 		eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no
 		estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award
-		de ACM, IEEE y CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer
-		Science and Electrical Engineering en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la
+		de <abbr title="Association for computer machinery">ACM</abbr> y IEEE. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en <b>Computer
+		Science and Electrical Engineering</b> en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la
 		Universidad de los Andes.</p>
+
+		<address>
+			<a href="mailto:je.soto@uniandes.edu.co"> je.soto@uniandes.edu.co </a>
+			<br>
+			Bogotá, Colombia
+		</address>
+
 	</body>
 </html>
