More stuff to add, images, canvas, and stuff

--- a/Teaching/ISIS3710/HTML&CSS/src/ex1_Tags/figure.html
+++ b/Teaching/ISIS3710/HTML&CSS/src/ex1_Tags/figure.html
@@ -6,10 +6,10 @@
 	</head>
 
 	<body>
-		<FIGURE>
-<LEGEND>Figure 12. Using the FIGURE element </LEGEND> <IMG alt=“The FIGURE element is another example
-   of block semantics in HTML5” src=“figure_element.jpg”
-   border=“0” height=“140” width=“240”/>
-</FIGURE>
+		 <figure>
+		 	<legend><b>Figure 12.</b> Using the FIGURE element </legend> 
+		 	<br>
+		 	<img src="pl.png" alt="The Pulpit Rock">
+		</figure> 
 	</body>
 </html>
